--- a/force-app/main/classes/ExpensesController.cls
+++ b/force-app/main/classes/ExpensesController.cls
@@ -4,17 +4,17 @@ public with sharing class ExpensesController {
   }
 
   @AuraEnabled
-  public static List<Expenses__c> getExpenses() {
-    List<Expenses__c> expenses = new List<Expenses__c>();
+  public static List<Expense__c> getExpenses() {
+    List<Expense__c> expenses = new List<Expense__c>();
     
     // Validate field-level security
-    if(Schema.sObjectType.Expenses__c.fields.Id.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.Name.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.Amount__c.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.Client__c.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.Date__c.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.Reimbursed__c.isAccessible() &&
-      Schema.sObjectType.Expenses__c.fields.CreatedDate.isAccessible()) {
+    if(Schema.sObjectType.Expense__c.fields.Id.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.Name.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.Amount__c.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.Client__c.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.Date__c.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.Reimbursed__c.isAccessible() &&
+      Schema.sObjectType.Expense__c.fields.CreatedDate.isAccessible()) {
         // Retrieve expenses
         expenses = [SELECT Id, Name, Amount__c, Client__c,
                       Date__c, Reimbursed__c, CreatedDate
