Update save/update functionality of expenses

--- a/force-app/main/classes/ExpensesController.cls
+++ b/force-app/main/classes/ExpensesController.cls
@@ -1,8 +1,4 @@
 public with sharing class ExpensesController {
-  public ExpensesController() {
-    
-  }
-
   @AuraEnabled
   public static List<Expense__c> getExpenses() {
     List<Expense__c> expenses = new List<Expense__c>();
@@ -18,9 +14,17 @@ public with sharing class ExpensesController {
         // Retrieve expenses
         expenses = [SELECT Id, Name, Amount__c, Client__c,
                       Date__c, Reimbursed__c, CreatedDate
-                FROM Expense__c];
+                FROM Expense__c
+                ORDER BY CreatedDate DESC];
     }
 
     return expenses;
+  }
+
+  @AuraEnabled
+  public static Expense__c saveExpense(Expense__c expense) {
+    // Perform isUpdatable() checking first, then
+    upsert expense;
+    return expense;
   }
 }
