Update SaveMultipleExpenses to add sorting of lists

--- a/force-app/main/default/classes/tests/TestExpensesController.cls
+++ b/force-app/main/default/classes/tests/TestExpensesController.cls
@@ -91,6 +91,10 @@ public class TestExpensesController {
       'Date__c', 'Reimbursed__c'
     };
 
+    // Sort lists
+    expenses.sort();
+    result.sort();
+    
     // Assert each field defined for every record saved
     for(String field : fieldsToCheck) {
       for(Integer i=0; i<expenses.size(); i++) {
